# Numerical-Solution-of-PDEs

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  ReadMe.md
docs/html/: 2D-Poisson_8c-example.html  2D-Poisson_8c.html  2D-Poisson_8c__incl.map  2D-Poisson_8c__incl.md5  Dirichlet_8c-example.html  Dirichlet_8c.html  Dirichlet_8c__incl.map  Dirichlet_8c__incl.md5  Neumann_8c-example.html  Neumann_8c.html  Neumann_8c__incl.map  Neumann_8c__incl.md5  Parabolic_ADI_8c-example.html  Parabolic_Explicit_8c-example.html  Parabolic_Verify_8c-example.html  Parabolic__ADI_8c.html  Parabolic__ADI_8c__incl.map  Parabolic__ADI_8c__incl.md5  Parabolic__Explicit_8c.html  Parabolic__Explicit_8c__incl.map  Parabolic__Explicit_8c__incl.md5  Parabolic__Verify_8c.html  Parabolic__Verify_8c__incl.map  Parabolic__Verify_8c__incl.md5  _2home_2li_2NPDE_2examples_2Dirichlet_8c-example.html  annotated.html  bessel_8c.html  bessel_8c__incl.map  bessel_8c__incl.md5  bessel_8h.html  bessel_8h__dep__incl.map  bessel_8h__dep__incl.md5  bessel_8h__incl.map  bessel_8h__incl.md5  bessel_8h_source.html  classes.html  csr_8c.html  csr_8c__incl.map  csr_8c__incl.md5  csr_8h.html  (+114 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  files_1.js  files_2.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+24 more)
docs/latex/: 2D-Poisson_8c-example.tex  2D-Poisson_8c.tex  2D-Poisson_8c__incl.md5  Dirichlet_8c-example.tex  Dirichlet_8c.tex  Dirichlet_8c__incl.md5  Neumann_8c-example.tex  Neumann_8c.tex  Neumann_8c__incl.md5  Parabolic_ADI_8c-example.tex  Parabolic_Explicit_8c-example.tex  Parabolic_Verify_8c-example.tex  Parabolic__ADI_8c.tex  Parabolic__ADI_8c__incl.md5  Parabolic__Explicit_8c.tex  Parabolic__Explicit_8c__incl.md5  Parabolic__Verify_8c.tex  Parabolic__Verify_8c__incl.md5  _2home_2li_2NPDE_2examples_2Dirichlet_8c-example.tex  annotated.tex  bessel_8c.tex  bessel_8c__incl.md5  bessel_8h.tex  bessel_8h__dep__incl.md5  bessel_8h__incl.md5  bessel_8h_source.tex  csr_8c.tex  csr_8c__incl.md5  csr_8h.tex  csr_8h__dep__incl.md5  csr_8h__incl.md5  csr_8h_source.tex  dir_0d126990016457eb3db78b202c239837.tex  dir_0d126990016457eb3db78b202c239837_dep.md5  dir_12b6fa9da5925487a6f9509c6019623d.tex  dir_12b6fa9da5925487a6f9509c6019623d_dep.md5  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  (+62 more)
examples/: 2D-Poisson.c  CMakeLists.txt  Dirichlet.c  Neumann.c  Parabolic.c  Parabolic_ADI.c  Parabolic_Explicit.c  Parabolic_Verify.c
include/: bessel.h  csr.h  grid.h  parabolic.h  poisson2d.h  utils.h  vec.h
results/: Dirichlet_exact.csv  Dirichlet_solution.csv  Neumann_exact.csv  Neumann_solution.csv
scripts/: visualize_Dirichlet.py  visualize_Neumann.py  visualize_Parabolic.py  visualize_Parabolic_ADI.py  visualize_Parabolic_ADI_refined.py  visualize_Parabolic_Explicit.py  visualize_Parabolic_Explicit_refined.py  visualize_Verify.py  visualize_utils.py
src/: CMakeLists.txt  csr.c  grid.c  utils.c  vec.c
src/math/: bessel.c
src/pde/: grid.c  parabolic.c  poisson2d.c
src/sparse/: csr.c  utils.c
tests/: 2D-Poisson.c  CMakeLists.txt  test_csr_3x3.c  test_csr_5x5.c
