# CMake File for NPDE
cmake_minimum_required(VERSION 3.10)
project(NPDE)
set(LIB_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(EXEC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(HEAD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(CSR_LIB csr)
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(examples)