cmake_minimum_required(VERSION 3.10)
project(CSRTEST)
set(SRC1 Dirichlet.c)
set(SRC2 Neumann.c)
include_directories(${HEAD_PATH})
link_directories(${LIB_PATH})
set(EXECUTABLE_OUTPUT_PATH ${EXEC_PATH})
add_executable(Dirichlet ${SRC1})
add_executable(Neumann ${SRC2})
target_link_libraries(Dirichlet ${CSR_LIB})
target_link_libraries(Dirichlet ${PDE_LIB})
target_link_libraries(Neumann ${CSR_LIB})
target_link_libraries(Neumann ${PDE_LIB})