cmake_minimum_required(VERSION 3.10)
project(CSRTEST)
set(SRC1 Dirichlet.c)
set(SRC2 Neumann.c)
set(SRC3 Parabolic_Verify.c)
set(SRC4 Parabolic_Explicit.c)
set(SRC5 Parabolic_ADI.c)
include_directories(${HEAD_PATH})
link_directories(${LIB_PATH})
set(EXECUTABLE_OUTPUT_PATH ${EXEC_PATH})
add_executable(Dirichlet ${SRC1})
add_executable(Neumann ${SRC2})
add_executable(Parabolic_Verify ${SRC3})
add_executable(Parabolic_Explicit ${SRC4})
add_executable(Parabolic_ADI ${SRC5})
target_link_libraries(Dirichlet ${CSR_LIB})
target_link_libraries(Dirichlet ${PDE_LIB})
target_link_libraries(Neumann ${CSR_LIB})
target_link_libraries(Neumann ${PDE_LIB})
target_link_libraries(Parabolic_Verify ${CSR_LIB})
target_link_libraries(Parabolic_Verify ${PDE_LIB})
target_link_libraries(Parabolic_Verify ${MYMATH_LIB})
target_link_libraries(Parabolic_Explicit ${CSR_LIB})
target_link_libraries(Parabolic_Explicit ${PDE_LIB})
target_link_libraries(Parabolic_Explicit ${MYMATH_LIB})
target_link_libraries(Parabolic_ADI ${CSR_LIB})
target_link_libraries(Parabolic_ADI ${PDE_LIB})
target_link_libraries(Parabolic_ADI ${MYMATH_LIB})