cmake_minimum_required(VERSION 3.10)
project(CSRLIB)
aux_source_directory(./sparse SPARSE_SRC)
aux_source_directory(./pde PDE_SRC)
aux_source_directory(./math MYMATH_SRC)
link_libraries(m)
include_directories(${HEAD_PATH})
set(LIBRARY_OUTPUT_PATH ${LIB_PATH})
add_library(${CSR_LIB} SHARED ${SPARSE_SRC})
add_library(${PDE_LIB} SHARED ${PDE_SRC})
add_library(${MYMATH_LIB} SHARED ${MYMATH_SRC})