cmake_minimum_required(VERSION 3.10)
project(CSRTEST)
set(SRC1 test_csr_3x3.c)
set(SRC2 test_csr_5x5.c)
set(SRC3 2D-Poisson.c)
include_directories(${HEAD_PATH})
link_directories(${LIB_PATH})
set(EXECUTABLE_OUTPUT_PATH ${EXEC_PATH})
add_executable(test_csr_3x3 ${SRC1})
add_executable(test_csr_5x5 ${SRC2})
add_executable(2D-Poisson ${SRC3})
target_link_libraries(test_csr_3x3 ${CSR_LIB})
target_link_libraries(test_csr_5x5 ${CSR_LIB})
target_link_libraries(2D-Poisson ${CSR_LIB})